Cookie policy fixed and image alignment issues

--- a/src/sass/global/_header.scss
+++ b/src/sass/global/_header.scss
@@ -403,7 +403,7 @@ header {
                         display: block;
                         a {
                             padding-left: 15px;
-                            padding-top: 0;
+                            padding-top: 5px;
                             padding-bottom: 0;
                         }
                     }
